
	PacIO Version 1.5.0-alpha
	* Updated PacRomSet.java.
		* Renamed it to PacDirectory.java.
		* The roms variable is now called files, and is a final List instead of an ArrayList.
		* The method getFiles now returns an unmodifiable list instead of pointing to the list.
		* Renamed the open methods to from.
		* Removed the openRoms method.
		* Lots of cleanup.
	* Removed the io.github.thatgarlicdude.pacio.roms package in the test src.
	* Added TestPacIO.java.

2025-12-18 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.4.0-alpha
	* Removed PacRomOpener.java.
		* The static open methods were transferred to PacRom.java instead.
	* Removed PacRomSetOpener.java.
		* Like PacRomOpener, the static open methods were moved to PacRomSet.java.
	* Added Savable.java.
		* It's an interface used for saving a file in memory.
	* Updated Closable.java.
		* The class is now public.
		* The class also now has a description.
		* The file now has a copyright message.
	* Updated PacRom.java.
		* The class now implements the newly added Savable interface.
	* Updated PacRomSet.java.
		* Like PacRom.java, it implements the Savable interface.
		* save() saves the ROM files inside the directory.

2025-12-14 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.3.0-alpha
	* Added PacIO.java.
		* That is the main class for the PacIO library.
		* It contains functions for creating PacRoms and PacRomSets.
	* Added the rom package to the pacio package.
		* All java files were moved to this directory.
		* The rom package is also in the src/test/java directory.

2025-12-13 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.2.0-alpha
	* Updated RomOpener.java.
		* RomOpener.java has been renamed to PacRomOpener.java.
		* This object is now an interface instead of a class.
		* Removed methods that relate to the PacRomSet class.
	* Added PacRomSetOpener.java.
		* Code from PacRomOpener.java were transferred there.
	* Updated ResourceGetter.java.